# kubernetes-readonly-mcp

./: .flake8  .gitignore  .mailmap  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
src/kubernetes_readonly_mcp/: __init__.py  server.py
tests/: test_server.py
